--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 1
 updates:
   - package-ecosystem: "nuget"
-    directory: "/"
+    directory: templates/PlanetNode/
     schedule:
       interval: "daily"
