--- a/templates/PlanetNode/Libplanet.Headless/Libplanet.Headless.csproj
+++ b/templates/PlanetNode/Libplanet.Headless/Libplanet.Headless.csproj
@@ -7,13 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Libplanet" Version="0.42.2" />
+    <PackageReference Include="Libplanet.Net" Version="0.42.2" />
+    <PackageReference Include="Libplanet.RocksDBStore" Version="0.42.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\libplanet\Libplanet\Libplanet.csproj" />
-    <ProjectReference Include="..\libplanet\Libplanet.Net\Libplanet.Net.csproj" />
-    <ProjectReference Include="..\libplanet\Libplanet.RocksDBStore\Libplanet.RocksDBStore.csproj" />
   </ItemGroup>
 
 </Project>
