--- a/templates/PlanetNode/PlanetNode/PlanetNode.csproj
+++ b/templates/PlanetNode/PlanetNode/PlanetNode.csproj
@@ -2,9 +2,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Libplanet.Headless\Libplanet.Headless.csproj" />
-    <ProjectReference Include="..\libplanet\Libplanet\Libplanet.csproj" />
-    <ProjectReference Include="..\libplanet\Libplanet.Explorer\Libplanet.Explorer.csproj" />
-    <ProjectReference Include="..\libplanet\Libplanet.Extensions.Cocona\Libplanet.Extensions.Cocona.csproj" />
     <AdditionalFiles Include="..\stylecop.json" />
   </ItemGroup>
 
@@ -12,9 +9,12 @@
     <PackageReference Include="Cocona" Version="2.0.3" />
     <PackageReference Include="GraphQL.Server.All" Version="6.0.0" />
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="6.0.0" />
+    <PackageReference Include="Libplanet" Version="0.42.2" />
+    <PackageReference Include="Libplanet.Explorer" Version="0.42.2" />
+    <PackageReference Include="Libplanet.Extensions.Cocona" Version="0.42.2" />
     <PackageReference Include="Serilog.Expressions" Version="3.4.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />   
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="8.42.0.51121">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
