--- a/templates/PlanetNode/PlanetNode/PlanetNode.csproj
+++ b/templates/PlanetNode/PlanetNode/PlanetNode.csproj
@@ -8,10 +8,11 @@
   <ItemGroup>
     <PackageReference Include="Cocona" Version="2.0.3" />
     <PackageReference Include="GraphQL.Server.All" Version="6.0.0" />
+    <PackageReference Include="GraphQL.Server.Core" Version="5.1.1" />
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="6.0.0" />
-    <PackageReference Include="Libplanet" Version="0.42.2" />
-    <PackageReference Include="Libplanet.Explorer" Version="0.42.2" />
-    <PackageReference Include="Libplanet.Extensions.Cocona" Version="0.42.2" />
+    <PackageReference Include="Libplanet" Version="0.44.0" />
+    <PackageReference Include="Libplanet.Explorer" Version="0.44.0" />
+    <PackageReference Include="Libplanet.Extensions.Cocona" Version="0.44.0" />
     <PackageReference Include="Serilog.Expressions" Version="3.4.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
