--- a/templates/PlanetNode/Libplanet.Headless/Libplanet.Headless.csproj
+++ b/templates/PlanetNode/Libplanet.Headless/Libplanet.Headless.csproj
@@ -2,9 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <CodeAnalysisRuleSet>..\PlanetNode.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\stylecop.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Libplanet" Version="0.42.2" />
