Auto-generate genesis block
Co-authored-by: Seo Myunggyun (Jonathan) <tkiapril@users.noreply.github.com>

--- a/templates/PlanetNode/PlanetNode/PlanetNode.csproj
+++ b/templates/PlanetNode/PlanetNode/PlanetNode.csproj
@@ -31,6 +31,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <CodeAnalysisRuleSet>..\PlanetNode.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
 
 </Project>
