--- a/templates/PlanetNode/PlanetNode/Properties/launchSettings.json
+++ b/templates/PlanetNode/PlanetNode/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "PlanetNode": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7040;http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
